main layout bug fix

--- a/src/app/mainFolder/main/main.component.css
+++ b/src/app/mainFolder/main/main.component.css
@@ -38,6 +38,7 @@ button {
 .content {
     
     height: calc(100vh - 98px);
+    width: 95%;
     margin: 16px;
     margin-left: 32px;
     display: flex;
