--- a/src/app/mainFolder/progress-content/progress-content.component.css
+++ b/src/app/mainFolder/progress-content/progress-content.component.css
@@ -67,9 +67,10 @@ li {
 }
 
 ul {
+  
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  justify-self: center;
  
 }
 
